changed some css for forms and text overflowing containers on profile and fixed thunk for creating a user review so that it updates dynamically

--- a/front-end/src/components/CreatePostModal/createpost.css
+++ b/front-end/src/components/CreatePostModal/createpost.css
@@ -1,7 +1,13 @@
 #create-post {
-    height: 50vh;
+    height: fit-content;
     min-height: 650px;
-    width: 50vw;
+    width: 35vw;
+    padding: 40px;
+    overflow: scroll;
+}
+
+#create-post > * {
+    font-size: 1vw;
 }
 
 /* mobile phone */
