--- a/front-end/src/components/Navigation/Navigation.css
+++ b/front-end/src/components/Navigation/Navigation.css
@@ -77,7 +77,7 @@ button {
     right: 50px;
     width: 250px;
     height: 30vh;
-    gap: 10px;
+    gap: 15px;
     background-color: white;
     border: 1px solid white;
     border-radius: 15px;
@@ -85,6 +85,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     z-index: 1;
 }
 
@@ -179,7 +180,7 @@ button {
 }
 
 .search {
-    width: 500px;
+    width: 35vw;
     height: 50px;
     border: 1px solid gray;
     border-radius: 15px;
