--- a/front-end/src/components/ProfilePage/profilepage.css
+++ b/front-end/src/components/ProfilePage/profilepage.css
@@ -1,6 +1,6 @@
 .profile-page-container {
     width: 80vw;
-    height: 100% !important;
+    height: fit-content;
     min-height: 100vh !important;
     position: relative;
     z-index: 0;
@@ -87,7 +87,7 @@
 }
 
 .listings-container {
-    height: 100%;
+    height: fit-content;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -98,6 +98,10 @@
 .description {
     width: 400px;
     border-bottom: 1px solid lightgray;
+}
+
+.post-info > .description {
+    width: 100%;
 }
 
 .modal-form {
@@ -118,8 +122,9 @@
     border-top: 1px solid gray;
     border-radius: 15px;
     box-shadow: 0px 5px 10px gray;
-    width: 250px;
-    height: 25px;
+    width: 50%;
+    height: 5%;
+    padding: 10px;
 }
 
 .modal-form > textarea {
@@ -127,8 +132,9 @@
     border-top: 1px solid gray;
     border-radius: 15px;
     box-shadow: 0px 5px 10px gray;
-    width: 250px;
-    height: 50px;
+    width: 50%;
+    height: 10%;
+    padding: 10px;
 }
 
 .modal-form > input:focus {
@@ -157,9 +163,25 @@
 
 }
 
+#info.post-card-info {
+    padding: 0;
+    padding-right: 10px;
+    width: 50%;
+}
+
 .new-post button {
     background-image: radial-gradient(circle at center center, rgb(255, 0, 0) 0%, rgb(206, 9, 9) 27.5%, rgb(167, 20, 20) 40%, rgb(136, 19, 19) 57.5%, rgb(94, 19, 19) 75%, rgb(68, 16, 16) 100%) !important;
+}
 
+@media screen and (max-width: 1000px) {
+    #listing.listing-container {
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+        padding: 10px 0;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -225,7 +247,7 @@
     #listings-container {
         width: 100%;
         max-width: 480px;
-        height: 60%;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: center;
